# pyinstaller_actions_sample

./: README.md  pyproject.toml  read_package_toml.spec  read_toml.spec
.github/workflows/: pyinstaller_mkdir.yaml  pyinstaller_read_mypackage.yaml  pyinstaller_read_onfly_file.yaml  pyinstaller_read_only_file.yaml  pyinstaller_read_package_toml.yaml  pyinstaller_read_toml_onefile.yaml
mypackage/: __init__.py  __main__.py
spec/: app_to_exe.spec  read_toml.spec
src/: check_app_local.py  check_debug.py  read_mypackage.py  read_only_file.py  read_package_toml.py  read_toml.py
