[tool.poetry]
name = "pyinstaller-actions-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
tomli = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"  # 開発専用

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
